# wizbit-fuse

./: Makefile.am  autogen.sh  configure.ac
tests/: Makefile.am  test_directory.vala  tests.vapi
wizbitfs/: Makefile.am  directory.vala  fuse.vapi  hello_world.vala  posix.vapi  wizbit-fuse.vala  wizbit.vapi  wizbitfs  wizbitfs.py
